# TalentLens

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/India_runs_data_and_ai_challenge/: rawcandidates_sample.json
icrs/: __init__.py  config.py
icrs/api/: __init__.py  app.py  providers.py  schemas.py
icrs/ingest/: __init__.py  redrob_adapter.py
icrs/models/: __init__.py  candidate.py  enums.py  job.py  ranking.py
icrs/output/: __init__.py  challenge_submission.py  shortlist.py
icrs/persistence/: __init__.py  base.py  memory.py  postgres.py
icrs/pipeline/: __init__.py  embedding.py  enricher.py  enrichment.py  explanation.py  ingestion.py  jd_decomposer.py  normalization.py  orchestrator.py  reranker.py
icrs/providers/: __init__.py  base.py
icrs/scoring/: __init__.py  composite.py  confidence.py  fairness.py  hard_filter.py  similarity.py  subscores.py  weights.py
icrs/ui/: __init__.py  dashboard.py  screen_candidate_ranking.py  screen_explainability.py  screen_job_creation.py
tests/: __init__.py  conftest.py  test_api.py  test_caching.py  test_candidate_models.py  test_challenge_submission.py  test_composite.py  test_confidence.py  test_embedding_generator.py  test_explanation.py  test_fairness.py  test_hard_filter.py  test_ingestion.py  test_jd_decomposer.py  test_job_models.py  test_orchestrator.py  test_orchestrator_resilience.py  test_persistence.py  test_profile_normalization.py  test_ranking_models.py  test_redrob_adapter.py  test_reranker.py  test_shortlist_output.py  test_signal_enrichment.py  test_similarity.py  test_smoke.py  test_subscores.py  test_ui_dashboard.py  test_weight_profiles.py
(+4 files in other folders)
